[gd_scene load_steps=10 format=3 uid="uid://cev1oj724kb4q"]

[ext_resource type="Texture2D" uid="uid://st8ms168yve8" path="res://Sprites/TitleScreen/label_continue.png" id="1_civyc"]
[ext_resource type="Texture2D" uid="uid://bxwgj30u4vynr" path="res://Sprites/TitleScreen/label_new_game.png" id="2_lnmiq"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="3_fc5ia"]
[ext_resource type="Texture2D" uid="uid://b4jjbwqoy1en0" path="res://Sprites/TitleScreen/label_options.png" id="3_laxdg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80dy6"]
size = Vector2(238, 41)

[sub_resource type="Animation" id="Animation_xoo6b"]
resource_name = "fadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_huujf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_r5gu4"]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yrivx"]
_data = {
"RESET": SubResource("Animation_huujf"),
"fadeIn": SubResource("Animation_xoo6b"),
"fadeOut": SubResource("Animation_r5gu4")
}

[node name="TitleScreen" type="Node2D"]

[node name="TitleScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TitleScreen"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 24.0
offset_right = 13.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="TitleScreen/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TitleScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Score" type="Label" parent="TitleScreen/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TitleScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_civyc")

[node name="TextureRect" type="TextureRect" parent="TitleScreen/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_civyc")

[node name="NewGame" type="TextureRect" parent="TitleScreen"]
layout_mode = 0
offset_left = 364.0
offset_top = 244.0
offset_right = 602.0
offset_bottom = 284.0
texture = ExtResource("2_lnmiq")

[node name="Continue" type="TextureRect" parent="TitleScreen"]
layout_mode = 0
offset_left = 384.0
offset_top = 160.0
offset_right = 575.0
offset_bottom = 200.0
texture = ExtResource("1_civyc")

[node name="Options" type="TextureRect" parent="TitleScreen"]
layout_mode = 0
offset_left = 397.0
offset_top = 341.0
offset_right = 563.0
offset_bottom = 387.0
texture = ExtResource("3_laxdg")

[node name="NewGameButton" type="Area2D" parent="."]
script = ExtResource("3_fc5ia")

[node name="NewGameCollision" type="CollisionShape2D" parent="NewGameButton"]
position = Vector2(483, 264.5)
shape = SubResource("RectangleShape2D_80dy6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="NewGameButton"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_yrivx")
}

[node name="ColorRect" type="ColorRect" parent="NewGameButton"]
offset_right = 1009.0
offset_bottom = 607.0
size_flags_horizontal = 0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="area_shape_entered" from="NewGameButton" to="NewGameButton" method="_on_area_shape_entered"]
[connection signal="mouse_entered" from="NewGameButton" to="NewGameButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="NewGameButton" to="NewGameButton" method="_on_mouse_exited"]
[connection signal="animation_finished" from="NewGameButton/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
